envoy/envoy.yaml
static_resources:
    listeners:
        - name: grpc_listener
          address:
              socket_address: { address: 0.0.0.0, port_value: 8500 }
          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          codec_type: auto
                          stat_prefix: ingress_http
                          route_config:
                              name: grpc_route
                              virtual_hosts:
                                  - name: auth_service
                                    domains: ["*"]
                                    routes:
                                        - match: { prefix: "/AuthRpc/" }
                                          route:
                                              cluster: cluster_auth
                                              timeout: 0s
                                              max_stream_duration:
                                                  grpc_timeout_header_max: 0s
                                        - match: { prefix: "/ChatsRpc/" }
                                          route:
                                              cluster: cluster_chats
                                              timeout: 0s
                                              max_stream_duration:
                                                  grpc_timeout_header_max: 0s
                                    # CORS #
                                    cors:
                                        allow_origin_string_match:
                                            - prefix: "*"
                                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,token
                                        max_age: "1728000"
                                        expose_headers: custom-header-1,grpc-status,grpc-message

                          # Фильтры для обработки запросов #
                          http_filters:
                              - name: envoy.filters.http.grpc_web
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                              - name: envoy.filters.http.cors
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

    clusters:
        - name: cluster_auth
          connect_timeout: 0.25s
          type: logical_dns
          http2_protocol_options: {}
          lb_policy: round_robin
          load_assignment:
              cluster_name: cluster_auth
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: auth
                                      port_value: 4400

        - name: cluster_chats
          connect_timeout: 0.25s
          type: logical_dns
          http2_protocol_options: {}
          lb_policy: round_robin
          load_assignment:
              cluster_name: cluster_chats
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: chats
                                      port_value: 4401
